--- a/angular.json
+++ b/angular.json
@@ -51,7 +51,7 @@
               "node_modules/tinymce/plugins/table/plugin.min.js",
               "node_modules/echarts/dist/echarts.min.js",
               "node_modules/echarts/dist/extension/bmap.min.js",
-              "node_modules/chart.js/dist/Chart.min.js"
+              "node_modules/chart.js/dist/chart.js"
             ],
             "allowedCommonJsDependencies": [
               "angular2-chartjs",
@@ -123,9 +123,11 @@
               "node_modules/tinymce/plugins/link/plugin.min.js",
               "node_modules/tinymce/plugins/paste/plugin.min.js",
               "node_modules/tinymce/plugins/table/plugin.min.js",
+              "node_modules/chart.js/dist/chart.js",
               "node_modules/echarts/dist/echarts.min.js",
-              "node_modules/echarts/dist/extension/bmap.min.js",
-              "node_modules/chart.js/dist/Chart.min.js"
+              "node_modules/echarts/dist/extension/bmap.min.js"
+              
+              
             ],
             "styles": [
               "node_modules/bootstrap/dist/css/bootstrap.css",
