--- a/package.json
+++ b/package.json
@@ -48,9 +48,11 @@
     "@nebular/security": "8.0.0",
     "@nebular/theme": "8.0.0",
     "@swimlane/ngx-charts": "^14.0.0",
+    "@types/chart.js": "^2.9.41",
     "angular2-chartjs": "0.4.1",
     "bootstrap": "4.3.1",
-    "chart.js": "2.7.1",
+    "chart.js": "^4.2.1",
+    "chartjs-plugin-zoom": "^2.0.1",
     "ckeditor": "4.7.3",
     "classlist.js": "1.1.20150312",
     "core-js": "2.5.1",
@@ -65,10 +67,13 @@
     "leaflet": "1.2.0",
     "mathjs": "^12.4.1",
     "nebular-icons": "1.1.0",
+    "net": "^1.0.2",
     "ng-multiselect-dropdown": "^0.3.9",
     "ng2-ckeditor": "^1.2.9",
+    "ng2-search-filter": "^0.5.1",
     "ng2-smart-table": "^1.6.0",
     "ngx-echarts": "^4.2.2",
+    "ngx-pagination": "^6.0.3",
     "node-sass": "^4.12.0",
     "normalize.css": "6.0.0",
     "pace-js": "1.0.2",
@@ -76,12 +81,15 @@
     "rxjs": "6.6.2",
     "rxjs-compat": "6.3.0",
     "socicon": "3.0.5",
+    "sockjs-client": "^1.6.1",
+    "stompjs": "^2.3.3",
     "style-loader": "^1.1.3",
     "sweetalert2": "^11.6.5",
     "tinymce": "4.5.7",
     "tslib": "^2.1.0",
     "typeface-exo": "0.0.22",
     "web-animations-js": "^2.3.2",
+    "xlsx": "^0.18.5",
     "zone.js": "~0.11.4"
   },
   "devDependencies": {
